 465.	[cleanup]	Allow 0 to be set as an omapi_value_t value by
			omapi_value_storeint().

 464.	[cleanup]	Build with openssl's RSA code instead of dnssafe.

 463.	[bug]		nsupdate sent malformed SOA queries to the second
			and subsequent name servers in resolv.conf if the
			query sent to the first one failed.

 462.	[bug]		--disable-ipv6 should work now.

 461.	[bug]		Specifying an unknown key in the "keys" clause of the
			"controls" statement caused a NULL pointer dereference.
			[RT #316]

 460.	[bug]		Much of the DNSSEC code only worked with class IN.

 459.	[bug]		Nslookup processed the "set" command incorrectly.

 458.	[bug]		Nslookup didn't properly check class and type values.
			[RT #305]

 457.	[bug]		Dig/host/hslookup didn't properly handle connect
			timeouts in certain situations, causing an 
			unnecessary warning message to be printed.

 456.	[bug]		Stub zones were not resetting the refresh and expire
			counters, loadtime or clearing the DNS_ZONE_REFRESH
			(refresh in progress) flag upon successful update.
			This disabled further refreshing of the stub zone,
			causing it to eventually expire. [RT #300]

 455.	[doc]		Document IPv4 prefix notation does not require a
			dotted decimal quad but may be just dotted decimal.

 454.	[bug]		Enforce dotted decimal and dotted decimal quad where
			documented as such in named.conf. [RT #304, RT #311]

 453.	[bug]		Warn if the obsolete option "maintain-ixfr-base"
			is specified in named.conf. [RT #306]

 452.	[bug]		Warn if the unimplemented option "statistics-file"
			is specified in named.conf. [RT #301]

 451.	[func]		Update forwarding implememted.

 450.	[func]		New function ns_client_sendraw().

 449.	[bug]		isc_bitstring_copy() only works correctly if the
			two bitstrings have the same lsb0 value, but this
			requirement was not documented, nor was there a
			REQUIRE for it.

 448.   [bug]		Host output formatting change, to match v8. [RT #255]
